--- a/templates/index.html
+++ b/templates/index.html
@@ -1,12 +1,12 @@
-<html lang="en" dir="ltr">
-  <head>
+<html>
+  <!-- <head>
     <meta charset="utf-8">
     <title></title>
-  </head>
+  </head> -->
   <body>
     <h1>Customs Wait Time App</h1>
 
-    <form action="/process_data" method="post" enctype="multipart/form-data">
+    <form action="/process" method="post" enctype="multipart/form-data">
         <input type="file" name="data_file" />
         <input type="submit" />
 
