can add multiple files

--- a/templates/index.html
+++ b/templates/index.html
@@ -4,10 +4,10 @@
     <title></title>
   </head> -->
   <body>
-    <h1>Customs Wait Time App</h1>
+    <h1>Customs Wait Time App!</h1>
 
     <form action="/process" method="post" enctype="multipart/form-data">
-        <input type="file" name="data_file" />
+        <input type="file" name="data_files", multiple = "" />
         <input type="submit" />
 
     </form>
